fix: adjust font size for about me introduction for improved readability

--- a/assets/style.css
+++ b/assets/style.css
@@ -25,7 +25,7 @@ body{max-width:1920px;margin:auto}
 .picture img{width:100%}
 #about-me,.form-container{flex:2}
 .about-me__title{margin-top:1em;margin-bottom:60px;font-size:30px}
-.about-me__introduction{font-weight:800;width:60%}
+.about-me__introduction{font-weight:800;width:60%; font-size: 16px;}
 #about-me p{width:80%;font-size:14px}
 #gallery{min-height:100vh}
 .title{text-align:center;padding-block:2em}
